<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group >
        <item
            android:id="@+id/nav_all_files"
            android:icon="@android:drawable/ic_menu_save"
            android:title="@string/menu_all_files" />
        <item
            android:id="@+id/nav_images"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_images" />
        <item
            android:id="@+id/nav_downloads"
            android:icon="@android:drawable/ic_menu_upload"
            android:title="@string/menu_downloads" />
        <item
            android:id="@+id/nav_audio"
            android:icon="@android:drawable/ic_lock_silent_mode_off"
            android:title="@string/menu_audio" />
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_video" />
    </group>
</menu>