<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_action_apply"
        android:icon="@drawable/ic_apply"
        android:title="@string/action_apply"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_action_revert"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/action_revert"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_action_columns_select_all"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/action_select_all"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_action_columns_deselect_all"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/action_deselect_all"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_action_columns_reset"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/action_reset"
        app:showAsAction="never" />

</menu>